# experiment-results-manager

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: python-package.yml
api_reference/: index.html
docs/: README.md  api_reference.md
docs/stylesheets/: extra.css
examples/: browse_registry.ipynb  compare_local_runs.ipynb  compare_runs.ipynb  iris.ipynb  serialize_and_deserialize.ipynb
examples/.ipynb_checkpoints/: compare_local_runs-checkpoint.ipynb
experiment_results_manager/: __init__.py  artifact.py  compare_runs.py  experiment_run.py  fsspec_util.py  html_util.py  main.py  registry.py  render_html.py  serde.py
search/: search_index.json
tests/: test_experiment_run.py
