[tool.poetry]
name = "experiment-results-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fsspec = ">=2021.4"
pydantic = "^1.6"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
ruff = "^0.0.261"
mypy = "^1.2.0"
pytest = "^7.3.0"
pylint = "^2.17.2"
ipykernel = "^6.22.0"
plotly = "^5.14"
seaborn = "^0.12.2"
nbformat = "^5.8.0"
jupyterlab = "^3.6.3"
isort = "^5.12.0"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.21.2" }
mkdocs-material = "^9.1.6"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true
